--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
   background-color: #000;
 }
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
 
-#header{
+#header {
   background-image: url(../assets/images/banner.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+#kurslar {
+  background-image: url(../assets/images/section_image.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.list {
+  border: 2px solid rgba(250, 164, 12, 0.5);
+}
+#about {
+  background-image: url(../assets/images/footer_image.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
